src/tui/views/snapshots/awsui__tui__views__ecr_detail__tests__render_returns_scan_snapshot_when_scan_tab_rendered.snap
---
source: src/tui/views/ecr_detail.rs
expression: buffer_to_string(&terminal)
---
┌ my-app ──────────────────────────────────────────────────────────── dev-account │ ap-northeast-1 ┐
│┌ Repository Info ───────────────────────────────────────────────────────────────────────────────┐│
││  URI         123456789012.dkr.ecr.ap-northeast-1.amazonaws.com/my-app                          ││
││  Registry    123456789012                                                                      ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│ Images  |  Scan  |  Lifecycle                                                                    │
│┌ Scan Summary ──────────────────────────────────────────────────────────────────────────────────┐│
││CRITICAL: 1  HIGH: 1  MEDIUM: 1                                                                 ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│Severity        Name                      Description                                             │
│CRITICAL        CVE-2024-0001             Remote code execution                                   │
│HIGH            CVE-2024-0002             Buffer overflow vulnerability                           │
│MEDIUM          CVE-2024-0003             Information disclosure                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 ]/[:tab j/k:move y:copy-digest D:delete Esc:back ?:help
