src/tui/views/snapshots/awsui__tui__views__ecr_detail__tests__render_returns_snapshot_when_rendered.snap
---
source: src/tui/views/ecr_detail.rs
expression: buffer_to_string(&terminal)
---
┌ my-app ──────────────────────────────────────────────────────────── dev-account │ ap-northeast-1 ┐
│┌ Repository Info ───────────────────────────────────────────────────────────────────────────────┐│
││  URI         123456789012.dkr.ecr.ap-northeast-1.amazonaws.com/my-app                          ││
││  Registry    123456789012                                                                      ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│Digest                    Tags                                 Size         Pushed At             │
│sha256:abc123def456...    latest, v1.0                         50.0 MB      2025-01-15T12:00:00Z  │
│sha256:def789abc123...    v0.9                                 10.0 MB      2025-01-15T12:00:00Z  │
│sha256:ghi012jkl345...    <untagged>                           1.0 MB       2025-01-15T12:00:00Z  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:move y:copy-digest Esc:back ?:help
